# princemuel.com

./: .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .mailmap  .markdownlint.yml  .marksman.toml  .oxlintrc.json  .pnp.cjs  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.json  .rustfmt.toml  .stylelintrc.json  CNAME  Cargo.toml  README.md  astro.config.ts  biome.jsonc  build.sh  ec.config.mjs  ec.config.ts  ec.config.txt  env-override.d.ts  env.d.ts  eslint.config.js  lefthook.yml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pwa-assets.config.ts  remix.config.js  remix.config.ts  sentry.client.config.ts  sentry.server.config.ts  shardoice.code-workspace  (+3 more)
.astro/: icon.d.ts
.config/: dotenv.ts  experiments.ts  iconify.json  images.ts  integrations.ts  markdown.ts  options.ts  plugins.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: suggestion.yml
.github/workflows/: blog_posts.yml  deploy.yml  pull_request.yml  stale.yml
.lefthook/commit-msg/: commitlint.sh
app/: env.d.ts  env.dto.mjs  global.css  layout.tsx  page.tsx  root.tsx
app/@types/: globals.d.ts  icon.d.ts  jsx-preact.d.ts  jsx.d.ts  misc.d.ts  models.d.ts  project.d.ts
app/actions/: contact.ts  subscribe.ts
app/assets/: assets.ts  index.ts
app/components/: Welcome.astro  header.tsx
app/constants/: metadata.ts  (+1 more)
common/: index.ts
config/: dotenv.ts  env-schema.ts  experiments.ts  fonts.mjs  icons.json  integrations.ts  markdown.ts  remark-rehype.ts
crates/poly/: Cargo.toml
crates/poly/src/: lib.rs
docs/: CONTRIBUTORS.txt  SETUP.md  TODOS.md
scripts/: convert-to-webm  periodic-sync.js  sync-schema
(+195 files in other folders)
